<resources>
    <string name="app_name">SEG2105Project</string>
    <string name="Login">Login</string>
    <string name="REGISTER">Register</string>
    <string name="Password">Password</string>
    <string name="registerClick" />
    <string name="loginClick" />
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="userName">Username</string>
    <string name="Create">Create account</string>
    <string name="emptyString" />
    <string name="tv_title2">Create an account</string>
    <string name="tv_AccComplete">Welcome! To complete your account, fill in the neccessary information about your clinic.</string>
    <string name="et_phone">Phone Number</string>
    <string name="et_addressHint">Address</string>
    <string name="et_cName">Name</string>
    <string name="tv_payOptions">Please select the payement options your clinic accepts</string>
</resources>
