<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        style="?android:attr/buttonBarStyle"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_title2"
            android:textColor="#009688"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_Pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select your account type:"
            android:textColor="#009688" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="Employee" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="Patient" />
        </RadioGroup>

        <Button
            android:id="@+id/btnCreate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_custom"
            android:textColor="@android:color/white"
            android:onClick="createClick"
            android:text="@string/Create" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>