<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeCompleteAccActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_AccComplete"
            android:textColor="#009688"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_cName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_cName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_addressHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_phone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tv_payOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_payOptions"
            android:textColor="#009688" />

        <CheckBox
            android:id="@+id/cB_Cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cash" />

        <CheckBox
            android:id="@+id/cB_Debit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Debit" />

        <CheckBox
            android:id="@+id/cB_Credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Credit" />

        <TextView
            android:id="@+id/tv_Insurance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please select the insurance options your clinic accepts"
            android:textColor="#009688" />

        <CheckBox
            android:id="@+id/cB_OHIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OHIP" />

        <CheckBox
            android:id="@+id/cB_pubIns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Public" />

        <CheckBox
            android:id="@+id/cB_priIns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Private" />

        <Button
            android:id="@+id/btn_CompleteAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_custom"
            android:onClick="onCompleteClick"
            android:text="Complete Account"
            android:textColor="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>